--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="landingTop"></div>
 
-  <!-- ------------------------------------Services Section -->
+  <!-- Services Section -->
   <div class="services mb-5">
-    <div class="title text-uppercase">
-      <h1>Our Services</h1>
+    <div class="title text-uppercase mb-5">
+      <h1>Our <span style="color: #0097a7">Services</span></h1>
     </div>
     <div class="description">
       <div class="row">
@@ -77,11 +77,10 @@
       </div>
     </div>
   </div>
-
-  <!-- ------------------------------------Facilities Section -->
+  <!-- Facilities Section -->
   <div class="facilities">
     <div class="title text-uppercase">
-      <h1>Our Facilities</h1>
+      <h1>Our <span style="color: #0097a7">Facilities</span></h1>
     </div>
     <div class="content mt-5">
       <div id="carouselExampleIndicators" class="carousel slide">
@@ -114,6 +113,14 @@
               class="d-block w-100"
               alt="..."
             />
+            <div class="carousel-caption overlay">
+              <h3>Dialysis unit</h3>
+              <p>
+                Dialysis is a procedure to remove waste products and excess
+                fluid from the blood when the kidneys stop working properly. It
+                often involves diverting blood to a machine to be cleaned.
+              </p>
+            </div>
           </div>
           <div class="carousel-item">
             <img
@@ -121,6 +128,17 @@
               class="d-block w-100"
               alt="..."
             />
+            <div class="carousel-caption overlay">
+              <h3>CT scan</h3>
+              <p>
+                A computerized tomography (CT) scan combines a series of X-ray
+                images taken from different angles around your body and uses
+                computer processing to create cross-sectional images (slices) of
+                the bones, blood vessels and soft tissues inside your body. CT
+                scan images provide more-detailed information than plain X-rays
+                do.
+              </p>
+            </div>
           </div>
           <div class="carousel-item">
             <img
@@ -128,6 +146,16 @@
               class="d-block w-100"
               alt="..."
             />
+            <div class="carousel-caption overlay">
+              <h3>Physiotherapy Centre</h3>
+              <p>
+                Physiotherapy as described by World Physiotherapy is a health
+                care profession concerned with human function and movement and
+                maximising physical potential. It uses physical approaches to
+                promote, maintain and restore physical, psychological and social
+                well-being, taking into account variations in health status.
+              </p>
+            </div>
           </div>
         </div>
         <button
@@ -148,6 +176,33 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Landing bottom -->
+  <div class="landingBottom">
+    <div class="title text-uppercase mb-5">
+      <h1>Our <span style="color: #0097a7">Doctors</span></h1>
+    </div>
+    <div class="description">
+      <div class="row align-items-center">
+        <div class="col-5">
+          <p class="fs-5">
+            A doctor is responsible for all sides of care of a patient. They
+            diagnose, educate, and treat patients to ensure that they have the
+            best possible care. A few of the main duties of a doctor are
+            performing diagnostic tests, recommending specialists for patients,
+            document patient's medical history, and educating patients.
+          </p>
+        </div>
+        <div class="col">
+          <img
+            src="https://media.hswstatic.com/eyJidWNrZXQiOiJjb250ZW50Lmhzd3N0YXRpYy5jb20iLCJrZXkiOiJnaWZcL2JlY29taW5nLWRvY3Rvci5qcGciLCJlZGl0cyI6eyJyZXNpemUiOnsid2lkdGgiOjgyOH0sInRvRm9ybWF0IjoiYXZpZiJ9fQ=="
+            alt="Doctors image"
+            width="100%"
+          />
+        </div>
       </div>
     </div>
   </div>
