--- a/src/app/our-doctors/our-doctors.component.html
+++ b/src/app/our-doctors/our-doctors.component.html
@@ -1,1 +1,18 @@
-<p>our-doctors works!</p>
+<div class="container">
+  <div class="title">
+    <h1>Our <span style="color: #0097a7">Doctors</span></h1>
+  </div>
+  <div class="card" style="width: 18rem">
+    <img
+      src="http://www.nimswandoor.com//uploads/BRD_1376140663.jpg"
+      class="card-img-top"
+      alt="..."
+    />
+    <div class="card-body">
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk
+        of the card's content.
+      </p>
+    </div>
+  </div>
+</div>
