--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -11,8 +11,10 @@
 .image {
   width: 500px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 40px;
 }
 
 .image img {
@@ -44,7 +46,7 @@
 }
 
 .carousel-item {
-  height: 550px;
+  height: 100%;
   position: relative;
 }
 
@@ -72,4 +74,3 @@
 .carousel:hover .overlay {
   opacity: 1;
 }
-
