--- a/src/app/quick-help/quick-help.component.html
+++ b/src/app/quick-help/quick-help.component.html
@@ -5,8 +5,9 @@
   </button>
   <div *ngIf="toggler" class="quickHelp">
     <button class="qhBtn"><i class="fa-solid fa-comment-medical fs-4"></i>
-      <span> Medcal Chat Assistance(Coming Soon)</span>
+      <span> Medcal Chat Assistance <br> (Coming Soon)</span>
     </button>
-    <button class="qhBtn">Button 2</button>
+    <button class="qhBtn" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i class="fa-solid fa-hospital-user fs-4"></i> Make a Booking</button>
   </div>
 </div>
+
