--- a/src/app/our-doctors/our-doctors.component.html
+++ b/src/app/our-doctors/our-doctors.component.html
@@ -2,17 +2,18 @@
   <div class="title">
     <h1>Our <span style="color: #0097a7">Doctors</span></h1>
   </div>
-  <div class="card" style="width: 18rem">
-    <img
-      src="http://www.nimswandoor.com//uploads/BRD_1376140663.jpg"
-      class="card-img-top"
-      alt="..."
-    />
-    <div class="card-body">
-      <p class="card-text">
-        Some quick example text to build on the card title and make up the bulk
-        of the card's content.
-      </p>
+  <div class="d-flex flex-wrap">
+    <div
+      *ngFor="let doctor of allDoctors"
+      class="card m-3"
+      style="width: 18rem"
+    >
+      <img [src]="doctor.image" class="card-img-top" alt="..." />
+      <div class="card-body text-center">
+        <p class="card-text text-uppercase">{{ doctor.name }}</p>
+        <p class="card-text">Department : {{ doctor.department }}</p>
+        <p class="card-text">Time : {{ doctor.time }}</p>
+      </div>
     </div>
   </div>
 </div>
