--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -2,194 +2,10 @@
   <div class="landingTop"></div>
 
   <!-- Services Section -->
-  <div class="services mb-5">
-    <div class="title text-uppercase mb-5">
-      <h1>Our <span style="color: #0097a7">Services</span></h1>
-    </div>
-    <div class="description">
-      <div class="row">
-        <div class="col">
-          <div class="row mt-5">
-            <div class="col-6 mb-4">
-              <div class="row">
-                <div class="col-2 icon"><i class="fa fa-h-square"></i></div>
-                <div class="col">
-                  <p class="fw-bold fs-5">PHYSIOTHERAPY</p>
-                  <p>
-                    Physical therapy also known as physiotherapy is provided by
-                    physical therapists who promote, maintain, or restore health
-                    through physical examination, diagnosis, management, etc
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <div class="col-2 icon">
-                  <i class="fa-solid fa-heart-pulse"></i>
-                </div>
-                <div class="col">
-                  <p class="fw-bold fs-5">ECG</p>
-                  <p>
-                    Ambulatory ECG. In this test you wear a small monitor which
-                    constantly records your heart rhythm. This test records the
-                    electrical activity of your heart
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <div class="col-2 icon">
-                  <i class="fa-solid fa-head-side-virus"></i>
-                </div>
-                <div class="col">
-                  <p class="fw-bold fs-5">AUDIOLOGY</p>
-                  <p>
-                    Audiologists use a variety of tests and procedures to assess
-                    hearing and balance function and to fit and dispense hearing
-                    aids and other assistive devices for hearing
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <div class="col-2 icon"><i class="fa-solid fa-lungs"></i></div>
-                <div class="col">
-                  <p class="fw-bold fs-5">ENDOSCOPY</p>
-                  <p>
-                    An endoscopy is a procedure in which your doctor uses
-                    specialized instruments to view and operate on the internal
-                    organs and vessels of your body
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-5 image">
-          <img
-            src="https://media.istockphoto.com/id/1392605355/photo/senior-woman-in-hospital-bed.jpg?b=1&s=612x612&w=0&k=20&c=CJgSOBj4RINSp1QrJ6xWFK3Kk42YHV2E9CDMgJQhzzc="
-            alt="service image"
-          />
-          <button class="btn btn-success" routerLink="our-services">
-            Explore our Services >
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-our-services></app-our-services>
+  
   <!-- Facilities Section -->
-  <div class="facilities">
-    <div class="title text-uppercase">
-      <h1>Our <span style="color: #0097a7">Facilities</span></h1>
-    </div>
-    <div class="content mt-5">
-      <div id="carouselExampleIndicators" class="carousel slide">
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-        </div>
-        <div class="carousel-inner" style="height: 550px">
-          <div class="carousel-item active">
-            <img
-              src="https://assets.hillrom.com/is/image/hillrom/plp-centrella-smart-bed-hero?$featureProductCarouselDesktop$"
-              class="d-block w-100"
-              alt="Facility carousel image 1"
-            />
-            <div class="carousel-caption overlay">
-              <h3>Dialysis unit</h3>
-              <p>
-                Dialysis is a procedure to remove waste products and excess
-                fluid from the blood when the kidneys stop working properly. It
-                often involves diverting blood to a machine to be cleaned.
-              </p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="https://kalmers.com/wp-content/uploads/2022/07/2063-1.jpg"
-              class="d-block w-100"
-              alt="Facility carousel image 2"
-            />
-            <div class="carousel-caption overlay">
-              <h3>CT scan</h3>
-              <p>
-                A computerized tomography (CT) scan combines a series of X-ray
-                images taken from different angles around your body and uses
-                computer processing to create cross-sectional images (slices) of
-                the bones, blood vessels and soft tissues inside your body. CT
-                scan images provide more-detailed information than plain X-rays
-                do.
-              </p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="https://midlandhealthcare.org/wp-content/uploads/2021/06/Physiotherapy.jpg"
-              class="d-block w-100"
-              alt="Facility carousel image 3"
-            />
-            <div class="carousel-caption overlay">
-              <h3>Physiotherapy Centre</h3>
-              <p>
-                Physiotherapy as described by World Physiotherapy is a health
-                care profession concerned with human function and movement and
-                maximising physical potential. It uses physical approaches to
-                promote, maintain and restore physical, psychological and social
-                well-being, taking into account variations in health status.
-              </p>
-            </div>
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-      <div class="d-flex justify-content-center">
-        <button
-          class="btn btn-outline-info w-50 mt-3 fs-5 text-uppercase"
-          routerLink="our-facilities"
-        >
-          Explore More of Our Facilities>
-        </button>
-      </div>
-    </div>
-  </div>
+ <app-our-facilities></app-our-facilities>
 
   <!-- Landing bottom -->
   <div class="landingBottom">
@@ -276,7 +92,7 @@
         <h3 class="px-3 text-success text-center">
           Please fill in the form to make a booking
         </h3>
-        <form [formGroup]="bookingForm" (ngSubmit)="bookNow()">
+        <form [formGroup]="bookingForm" (ngSubmit)="bookNow()" style="background-color: #31eaff79;" class="rounded">
           <div class="row p-3">
             <div class="col-6">
               <div class="form-floating mb-3">
@@ -328,7 +144,7 @@
             </div>
           </div>
           <label class="ms-3 mb-2 text-uppercase">Choose your Department</label>
-          <div class="d-flex flex-wrap p-3" style="background-color: #31eaff79;">
+          <div class="d-flex flex-wrap p-3">
             <div class="form-check me-4">
               <input
                 name="department"
