--- a/src/app/our-services/our-services.component.html
+++ b/src/app/our-services/our-services.component.html
@@ -69,9 +69,9 @@
             src="https://media.istockphoto.com/id/1392605355/photo/senior-woman-in-hospital-bed.jpg?b=1&s=612x612&w=0&k=20&c=CJgSOBj4RINSp1QrJ6xWFK3Kk42YHV2E9CDMgJQhzzc="
             alt="service image"
           />
-          <button class="btn btn-success" routerLink="our-services">
+          <!-- <button class="btn btn-success" routerLink="our-services">
             Explore our Services >
-          </button>
+          </button> -->
         </div>
       </div>
     </div>
