--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -1,1 +1,36 @@
-<p>login works!</p>
+<div class="container">
+  <div class="loginBody">
+    <form [formGroup]="loginForm" *ngIf="!isLogged" (ngSubmit)="login()">
+      <h2 class="text-center">Login Form</h2>
+      <div class="form-floating mb-3">
+        <input
+          type="text"
+          class="form-control"
+          id="floatingUsername"
+          placeholder="name@example.com"
+          name="username"
+          formControlName="username"
+        />
+        <label for="floatingInput">Username</label>
+      </div>
+      <div class="form-floating">
+        <input
+          type="password"
+          class="form-control"
+          id="floatingPassword"
+          placeholder="Password"
+          name="password"
+          formControlName="password"
+        />
+        <label for="floatingPassword">Password</label>
+      </div>
+      <div class="loginBtn">
+        <button class="btn btn-primary" type="submit">Login</button>
+      </div>
+    </form>
+    <div *ngIf="isLogged" class="text-center">
+      <h2 class="text-success text-uppercase">Logged in Successfully</h2>
+      <h3>Logging in as {{ user }}</h3>
+    </div>
+  </div>
+</div>
