--- a/src/app/our-facilities/our-facilities.component.html
+++ b/src/app/our-facilities/our-facilities.component.html
@@ -97,13 +97,13 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <div class="d-flex justify-content-center">
+      <!-- <div class="d-flex justify-content-center">
         <button
           class="btn btn-outline-info w-50 mt-3 fs-5 text-uppercase"
           routerLink="our-facilities"
         >
           Explore More of Our Facilities>
         </button>
-      </div>
+      </div> -->
     </div>
   </div>
